# Phase_3_Todo_AI_Chatbot

./: .gitignore
.claude/agents/: confirmation-agent.md  conversation-manager.md  error-handler.md  task-lister.md  task-manager-agent.md  user-context-agent.md
.claude/skills/add_task/: skills.md
.claude/skills/complete_task/: skills.md
.specify/memory/: constitution.md
backend/: create_simple_db.py  create_test_user.py  initialize_db.py  main.py  pyproject.toml  requirements.txt  run_server.py  simple_main.py  start_server.py  test_chat_endpoint.py
backend/ai_chatbot/: __init__.py  config.py  main.py  requirements.txt  server.py
backend/ai_chatbot/agent/: agent.py  cohere_provider.py
backend/ai_chatbot/api/: chat_endpoint.py
backend/ai_chatbot/database/: engine.py  models.py  repositories.py
backend/ai_chatbot/database/migrations/: alembic.ini  env.py
backend/ai_chatbot/middleware/: jwt_middleware.py
backend/ai_chatbot/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/: main.py
backend/app/api/v1/: api.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/models/: task.py  user.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: Chatbot.tsx  ClientWrapper.tsx  TaskList.tsx
frontend/lib/: api.ts  apiServer.ts  auth.ts
frontend/types/: user.ts
history/prompts/: 0001-fix-unauthorized-error-in-chatbot-api-calls.red.prompt.md
specs/004-ai-todo-chatbot/: plan.md  spec.md  tasks.md
(+29 files in other folders)
